--- a/julia/problem_099.ipynb
+++ b/julia/problem_099.ipynb
@@ -5,8 +5,114 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 99\n",
+    "# Problem 99\n",
     "https://projecteuler.net/problem=99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f48d8b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Julia v\", string(VERSION))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0ef4b191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f18108d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Vector{Int64}}:\n",
+       " [519432, 525806]\n",
+       " [632382, 518061]\n",
+       " [78864, 613712]\n",
+       " [466580, 530130]\n",
+       " [780495, 510032]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "URL = \"https://projecteuler.net/resources/documents/0099_base_exp.txt\"\n",
+    "\n",
+    "file = open(download(URL)) do f\n",
+    "    readlines(f)\n",
+    "end\n",
+    "\n",
+    "data = [[parse(Int, n) for n in split(line, \",\")] for line in file]\n",
+    "\n",
+    "@assert length(data) == 1000\n",
+    "\n",
+    "first(data, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "261d4a8b",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (brute force)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6a3969d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  16.236 s (280268 allocations: 10.93 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "709"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime last(findmax(big(x)^y for (x, y) in data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d53dff2a",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (log)"
    ]
   },
   {
@@ -19,76 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0ef4b191",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using CSV, DataFrames, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "440efee5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "URL = \"https://projecteuler.net/resources/documents/0099_base_exp.txt\"\n",
-    "df = CSV.read(download(URL), DataFrame, header=[\"base\", \"exp\"]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "82676c22",
+   "execution_count": 5,
+   "id": "541714ee",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><div style = \"float: left;\"><span>5×2 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">base</th><th style = \"text-align: left;\">exp</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">519432</td><td style = \"text-align: right;\">525806</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">632382</td><td style = \"text-align: right;\">518061</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">78864</td><td style = \"text-align: right;\">613712</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">466580</td><td style = \"text-align: right;\">530130</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">780495</td><td style = \"text-align: right;\">510032</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cc}\n",
-       "\t& base & exp\\\\\n",
-       "\t\\hline\n",
-       "\t& Int64 & Int64\\\\\n",
-       "\t\\hline\n",
-       "\t1 & 519432 & 525806 \\\\\n",
-       "\t2 & 632382 & 518061 \\\\\n",
-       "\t3 & 78864 & 613712 \\\\\n",
-       "\t4 & 466580 & 530130 \\\\\n",
-       "\t5 & 780495 & 510032 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m5×2 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m base   \u001b[0m\u001b[1m exp    \u001b[0m\n",
-       "     │\u001b[90m Int64  \u001b[0m\u001b[90m Int64  \u001b[0m\n",
-       "─────┼────────────────\n",
-       "   1 │ 519432  525806\n",
-       "   2 │ 632382  518061\n",
-       "   3 │  78864  613712\n",
-       "   4 │ 466580  530130\n",
-       "   5 │ 780495  510032"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "first(df, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a5ffd25",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  6.558 μs (3 allocations: 64 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -100,78 +147,13 @@
     }
    ],
    "source": [
-    "max_value = 0\n",
-    "max_index = 0\n",
-    "\n",
-    "counter = 1\n",
-    "for value in [exp*log(base) for (base, exp) in zip(df.base, df.exp)]\n",
-    "    if max_value < value\n",
-    "        max_value = value\n",
-    "        max_index = counter\n",
-    "    end\n",
-    "    counter += 1\n",
-    "end\n",
-    "\n",
-    "max_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8a86fd44",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m60.000 μs\u001b[22m\u001b[39m … \u001b[35m 5.755 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 98.55%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m61.375 μs              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m65.059 μs\u001b[22m\u001b[39m ± \u001b[32m94.612 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m3.80% ±  2.73%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m▄\u001b[39m▇\u001b[39m█\u001b[34m▇\u001b[39m\u001b[39m▅\u001b[39m▄\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[32m▂\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▆\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m \u001b[39m█\n",
-       "  60 μs\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      79.8 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m62.56 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m2496\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark begin\n",
-    "    max_value = 0\n",
-    "    max_index = 0\n",
-    "\n",
-    "    counter = 1\n",
-    "    for value in [exp*log(base) for (base, exp) in zip(df.base, df.exp)]\n",
-    "        if max_value < value\n",
-    "            max_value = value\n",
-    "            max_index = counter\n",
-    "        end\n",
-    "        counter += 1\n",
-    "    end\n",
-    "\n",
-    "    max_index\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "84450eae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(99, b);"
+    "@btime last(findmax(y * log(x) for (x, y) in data))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -179,7 +161,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
