--- a/julia/problem_067.ipynb
+++ b/julia/problem_067.ipynb
@@ -5,58 +5,76 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 67\n",
+    "# Problem 67\n",
     "https://projecteuler.net/problem=67"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c6409fe0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e68c6350",
+   "id": "6bc6a883",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file ...\n"
+      "Julia v1.11.1\n"
      ]
     }
    ],
    "source": [
-    "file_name = \"0067_triangle.txt\"\n",
-    "file_path = \"../data/\"\n",
+    "println(\"Julia v\", string(VERSION))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9213d0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdc66692",
+   "metadata": {},
+   "source": [
+    "__Steps to solve the problem__\n",
     "\n",
-    "if isfile(file_path * file_name)\n",
-    "    println(\"Reading file ...\")\n",
-    "    raw = open(file_path * file_name) do f\n",
-    "        readlines(f)\n",
-    "    end\n",
-    "else\n",
-    "    println(\"Downloading file ...\")\n",
-    "    raw = open(download(\"https://projecteuler.net/resources/documents/\" * file_name)) do f\n",
-    "        readlines(f)\n",
-    "    end\n",
-    "end\n",
+    "A top-down approach leads to a local maximum and is know as a 'greedy algorithm'.  \n",
+    "A bottom-up approach guarantees a global maximum.\n",
     "\n",
-    "@assert length(raw) == 100"
+    "Example:\n",
+    "\n",
+    "```\n",
+    "      04      \n",
+    "    06  07    \n",
+    "  10  01  02  \n",
+    "05  08  09  03\n",
+    "```\n",
+    "\n",
+    "Top-down approach:  \n",
+    "04 + 07 + 02 + 09 = 22 (local maximum)\n",
+    "\n",
+    "Bottom-up approach:  \n",
+    "08 + 10 + 06 + 04 = 28 (global maximum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a07a3be",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33516055",
+   "id": "1fc4613c",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +88,10 @@
     }
    ],
    "source": [
-    "function triangle(raw)\n",
+    "function triangle(file_name)\n",
+    "    raw = open(\"../data/\" * file_name) do f\n",
+    "        readlines(f)\n",
+    "    end\n",
     "    return [[parse(Int64, val) for val in split(line)] for line in raw]\n",
     "end"
    ]
@@ -78,19 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c7149f5",
+   "id": "e9c8f51a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "maximum_path_sum (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function maximum_path_sum(triangle)\n",
     "    data = reverse(triangle)\n",
@@ -98,15 +109,24 @@
     "        data[i+1][j] = maximum([data[i][j]+data[i+1][j], data[i][j+1]+data[i+1][j]])\n",
     "    end\n",
     "    return reverse(data)[1][1]\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert maximum_path_sum([[4], [6, 7], [10, 1, 2], [5, 8, 9, 3]]) == 28"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f36e3dfb",
+   "id": "ec0e4a68",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  268.166 μs (10734 allocations: 817.97 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -118,52 +138,13 @@
     }
    ],
    "source": [
-    "maximum_path_sum(triangle(raw))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fc8f5197",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m260.750 μs\u001b[22m\u001b[39m … \u001b[35m 13.960 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 72.21%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m289.979 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m339.333 μs\u001b[22m\u001b[39m ± \u001b[32m391.237 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m11.89% ± 12.91%\n",
-       "\n",
-       "  \u001b[39m▇\u001b[34m█\u001b[39m\u001b[39m▄\u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\n",
-       "  \u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m▇\u001b[39m▆\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▅\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▄\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m▃\u001b[39m▅\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m \u001b[39m█\n",
-       "  261 μs\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m       1.78 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m796.70 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m10517\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark maximum_path_sum(triangle(raw))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c77a5df7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(67, b);"
+    "@btime maximum_path_sum(triangle(\"0067_triangle.txt\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -171,7 +152,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
