--- a/julia/problem_092.ipynb
+++ b/julia/problem_092.ipynb
@@ -5,14 +5,14 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "# Problem 97\n",
-    "https://projecteuler.net/problem=97"
+    "# Problem 92\n",
+    "https://projecteuler.net/problem=92"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bcfc271",
+   "id": "9b28719f",
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,13 @@
     }
    ],
    "source": [
-    "println(\"Julia v\", string(VERSION))"
+    "println(\"Julia v\", VERSION)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d522a49",
+   "id": "d4560f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51eee5c9",
+   "id": "cbb2f265",
    "metadata": {},
    "source": [
     "### Solution"
@@ -48,20 +48,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8bc85e47",
+   "id": "9745c310",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  142.631 ms (6436 allocations: 77.49 MiB)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"8739992577\""
+       "square_digit_chains (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -69,7 +62,42 @@
     }
    ],
    "source": [
-    "@btime string(28433*big(2)^7830457+1)[end-9:end]"
+    "function square_digit_chains(n::Int64)::Bool\n",
+    "    n == 1 && return false\n",
+    "    n == 89 && return true\n",
+    "    while n ∉ [1, 89]\n",
+    "        n = sum(n^2 for n ∈ digits(n))\n",
+    "        n == 1 && return false\n",
+    "        n == 89 && return true\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c56ecad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2.591 s (209357019 allocations: 8.58 GiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8581146"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime sum(map(square_digit_chains, 1:10^7-1))"
    ]
   }
  ],
