--- a/python/problem_018.ipynb
+++ b/python/problem_018.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0a075279",
    "metadata": {},
    "outputs": [],
@@ -78,32 +78,8 @@
     "        triangle.pop()\n",
     "    return triangle[0][0]\n",
     "\n",
-    "# Test 1 #############################################################################\n",
-    "\n",
-    "data = \"\"\"\n",
-    "   3\n",
-    "  7 4\n",
-    " 2 4 6\n",
-    "8 5 9 3\n",
-    "\"\"\"\n",
-    "\n",
-    "triangle = [[int(string) for string in row.split()] for row in data.split('\\n')[1:-1]]\n",
-    "\n",
-    "assert maximum_path(triangle) == 23\n",
-    "\n",
-    "\n",
-    "# Test 2 #############################################################################\n",
-    "\n",
-    "data = \"\"\"\n",
-    "      04\n",
-    "    06  07\n",
-    "  10  01  02\n",
-    "05  08  09  03\n",
-    "\"\"\"\n",
-    "\n",
-    "triangle = [[int(string) for string in row.split()] for row in data.split('\\n')[1:-1]]\n",
-    "\n",
-    "assert maximum_path(triangle) == 28"
+    "assert maximum_path([[4], [6, 7], [10, 1, 2], [5, 8, 9, 3]]) == 28\n",
+    "assert maximum_path([[3], [7, 4], [ 2, 4, 6], [8, 5, 9, 3]]) == 23"
    ]
   },
   {
