--- a/python/problem_067.ipynb
+++ b/python/problem_067.ipynb
@@ -5,24 +5,66 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 67\n",
+    "# Problem 67\n",
     "https://projecteuler.net/problem=67"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3327d53",
+   "id": "ac1fcd73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fad0bc9",
+   "metadata": {},
+   "source": [
+    "__Steps to solve the problem__\n",
+    "\n",
+    "A top-down approach leads to a local maximum and is know as a 'greedy algorithm'.  \n",
+    "A bottom-up approach guarantees a global maximum.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "```\n",
+    "      04      \n",
+    "    06  07    \n",
+    "  10  01  02  \n",
+    "05  08  09  03\n",
+    "```\n",
+    "\n",
+    "Top-down approach:  \n",
+    "04 + 07 + 02 + 09 = 22 (local maximum)\n",
+    "\n",
+    "Bottom-up approach:  \n",
+    "08 + 10 + 06 + 04 = 28 (global maximum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3514f703",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "47c7baaf",
+   "id": "0a075279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +76,16 @@
     "            new_values.append(m)\n",
     "        triangle[row_index] = new_values\n",
     "        triangle.pop()\n",
-    "    return triangle[0][0]"
+    "    return triangle[0][0]\n",
+    "\n",
+    "assert maximum_path([[4], [6, 7], [10, 1, 2], [5, 8, 9, 3]]) == 28\n",
+    "assert maximum_path([[3], [7, 4], [ 2, 4, 6], [8, 5, 9, 3]]) == 23"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b2aa9a9",
+   "id": "6681562d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "db496458",
+   "id": "d04fb8ee",
    "metadata": {},
    "outputs": [
     {
@@ -70,26 +115,27 @@
     }
    ],
    "source": [
+    "# answer\n",
     "maximum_path(get_data(\"../data/0067_triangle.txt\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e5dd97d5",
+   "id": "4a1ea00c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.35 ms ± 5.1 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.18 ms ± 50 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o maximum_path(get_data(\"../data/0067_triangle.txt\"))\n",
-    "euler.save_benchmark(67, t)"
+    "# benchmark\n",
+    "%timeit maximum_path(get_data(\"../data/0067_triangle.txt\"))"
    ]
   }
  ],
@@ -109,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
