--- a/python/problem_092.ipynb
+++ b/python/problem_092.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 92\n",
+    "# Problem 92\n",
     "https://projecteuler.net/problem=92"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "40f4cb3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc221641",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -58,26 +74,27 @@
     }
    ],
    "source": [
+    "# answer\n",
     "sum([square_digit_train(n) for n in range(1, 10_000_000)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ae15781",
+   "id": "4f26bebd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37.3 s ± 354 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "30.6 s ± 385 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([square_digit_train(n) for n in range(1, 10_000_000)])\n",
-    "euler.save_benchmark(92, t)"
+    "# benchmark\n",
+    "%timeit sum([square_digit_train(n) for n in range(1, 10_000_000)])"
    ]
   }
  ],
@@ -97,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
